# neo4j-movielens-ml

./: .gitignore  README.md  pyproject.toml  requirements.txt
docker/: neo4j-docker-compose.yml
notebooks/: Untitled.ipynb
scripts/: calc_user_recommendations.py  export_graph_features.py  generate_graph_features.cypher  generate_graph_features.py  load_data.py
