[project]
name = "neo4j-movielens-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "Yash Kushwaha",email = "37941798+YashKushwaha@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "neo4j (>=5.28.1,<6.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "xgboost (>=3.0.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
